--- a/internetdefense/templates/index.html
+++ b/internetdefense/templates/index.html
@@ -41,7 +41,7 @@
                 <div class="small">
                     <span class="inputs">
                         <input type="radio" name="campaign" id="single" value="" />
-                        <label for="single" class="montserrat">Just for <a href="http://www.fixthecfaa.com/">Fix the CFAA</a></label>
+                        <label for="single" class="montserrat">Just for <a href="http://www.callforfreedom.org">Call for Freedom</a></label>
                     </span>
                     <p class="description">Code is live as soon as you add it, but you'll have to update it for each new campaign.</p>
                     <fieldset style="display: none;">
