--- a/internetdefense/apps/campaigns/templates/campaigns/nsa/modal.html
+++ b/internetdefense/apps/campaigns/templates/campaigns/nsa/modal.html
@@ -18,7 +18,7 @@
     .txt-email {color:#ababab; font-size:14px; padding-left:10px;}
     .btn-sign{cursor:pointer;background:transparent url('{% static 'campaigns/nsa/modal/bg_sign.png' %}') left top repeat; color:#fff; padding:3px 20px; font-size:14px; border-top-right-radius:5px; border-bottom-right-radius:5px;text-transform:uppercase;}
     .btn-share{background:transparent url('{% static 'campaigns/nsa/modal/bg_sign.png' %}') left top repeat;margin-left:10px; color:#fff; padding:3px 20px;font-size:14px;border-radius:5px;text-transform:uppercase; text-decoration:none; display:inline-block;}
-    .adv-footer{font-size:11px; background: url('{% static 'bg_amendment_fight.png'}') left center no-repeat; line-height:19px; display:inline-block; padding-left:25px;}
+    .adv-footer{font-size:11px; background: url('{% static 'campaigns/nsa/modal/bg_amendment_fight.png' %}') left center no-repeat; line-height:19px; display:inline-block; padding-left:25px;}
     .adv-footer a{color:#53accb;}
     .adv-details{position:relative;}
     .adv-details img{vertical-align:middle;}
