--- a/internetdefense/apps/campaigns/templates/campaigns/nsa/modal.html
+++ b/internetdefense/apps/campaigns/templates/campaigns/nsa/modal.html
@@ -1,3 +1,5 @@
+{% load staticfiles %}
+
 <!DOCTYPE html>
 <!--[if lt IE 7]> <html class="no-js ie6" lang="en"> <![endif]-->
 <!--[if IE 7]>    <html class="no-js ie7" lang="en"> <![endif]-->
