--- a/internetdefense/apps/campaigns/templates/campaigns/nsa/banner.html
+++ b/internetdefense/apps/campaigns/templates/campaigns/nsa/banner.html
@@ -13,10 +13,13 @@
 
   <style>
    *{padding:0; margin:0;}
-   .ad_banner_full{width:100%; min-height:128px; display:block; background:#120207 url('{% static 'campaigns/nsa/banner/bg-adbanner-fullwidth.png' %}') 0 0 repeat-x; color:#fff; font-family:'Helvetica Neue',Arial,Sans-Serif; font-size:14px; line-height:1.5; text-decoration:none;}
-   .ad_banner_full .ad_bannerc{display:block; min-height:128px; background:transparent url('{% static 'campaigns/nsa/banner/ad-banner-lens.jpg' %}') 10% 0 no-repeat; vertical-align:middle;}
-   .ad_banner_full .ad_title{display:inline-block; width:40%; padding:20px 5% 0 5%; font-size:24px; color:#fff; text-shadow:2px 2px 2px #000; vertical-align:middle;}
-   .ad_banner_full .ad_subtitle{display:inline-block; width:25%; padding-top:15px; color:#fff; text-shadow:1px 1px 1px #000; vertical-align:middle;}
+   body {
+     background:#120207;
+   }
+   .ad_banner_full{ margin: 0 auto; width:960px; padding: 0 20px; min-height:128px; display:block; background:#120207 url('{% static 'campaigns/nsa/banner/bg-adbanner-fullwidth.png' %}') 0 0 repeat-x; color:#fff; font-family:'Helvetica Neue',Arial,Sans-Serif; font-size:14px; line-height:1.5; text-decoration:none;}
+   .ad_banner_full .ad_bannerc{ width: 960px; display:block; min-height:128px; padding: 0; margin: 0; background:transparent url('{% static 'campaigns/nsa/banner/ad-banner-lens.jpg' %}') 10% 0 no-repeat; vertical-align:middle;}
+   .ad_banner_full .ad_title{ font-weight: bold; float: left; width: 450px; line-height: 28px; padding: 0; margin-right: 30px; margin-top: 30px; font-size:25px; color:#fff; text-shadow:0px 3px 3px #000; vertical-align:middle;}
+   .ad_banner_full .ad_subtitle{display:inline-block; width: 260px; margin-right: 30px; padding-top:15px; color:#fff; margin-top: 10px; line-height: 18px; font-style: italic; font-size: 16px; vertical-align:middle;}
    .ad_banner_full .ad_button1, .ad_banner_full .ad_button2{display:inline-block; padding:0 20px; margin:30px 0 0 5px; line-height:45px; color:#fff; background-color:#358e00; font-weight:bold; font-size:18px; border-radius:3px; text-shadow:1px 1px 1px #194301; vertical-align:middle; white-space:nowrap;}
    .ad_banner_full .ad_button2{background-color:#1194df; text-shadow:1px 1px 1px #024469;}
    .ad_banner_full .ad_button1:hover{background-color:#4ed100} .ad_banner_full .ad_button2:hover{background-color:#33ccff;}
@@ -24,11 +27,11 @@
  </head>
  <body>
   <a class="ad_banner_full" href="http://callforfreedom.org" target="_blank"> 
-   <span class="ad_bannerc"> 	
-    <strong class="ad_title">This 4th July, we stand for the 4th Amendment and against NSA spying.</strong>
-    <em class="ad_subtitle">The right of the people to be secure... against unreasonable searches and seizures, <strong>shall not be violeted</strong>.</em>
+   <div class="ad_bannerc"> 	
+    <div class="ad_title">This 4th July, we stand for the 4th Amendment and against NSA spying.</div>
+    <div class="ad_subtitle">The right of the people to be secure... against unreasonable searches and seizures, <strong>shall not be violeted</strong>.</div>
     <small class="ad_button1">Sign</small> <small class="ad_button2">Share</small>
-   </span> 
+   </div> 
   </a>
  </body>
 </html> 
