Update top banner cta

--- a/internetdefense/templates/index.html
+++ b/internetdefense/templates/index.html
@@ -4,7 +4,7 @@
 
     <div class="wrap" id="intro">
         <h1 id="logo">Internet Defense League</h1>
-        <h2 class="montserrat">Join our campaigns for Internet freedom!</h2>
+        <h2 class="montserrat">4th of July Cat Signal! Join the largest protest since SOPA to stop NSA spying!</h2>
         
         <div class="indent dark large">
             <h3 class="montserrat">Get the code for your site:</h3>
