--- a/internetdefense/apps/campaigns/templates/campaigns/nsa/modal.html
+++ b/internetdefense/apps/campaigns/templates/campaigns/nsa/modal.html
@@ -136,7 +136,7 @@
               <input type="hidden" name="organization_KEY" value="501">
               <input type="hidden" name="action" value="1" />
               <input type="hidden" name="user_agent" id="user_agent" value="">
-              <input type="hidden" name="redirect" value="http://internetdefenseleague.org/confirm"> 
+              <input type="hidden" name="redirect" value="https://cms.fightforthefuture.org/july-4th-celebrate-4th-amendment-post-it-everywhere/#thanks"> 
               <input type="submit" value="Sign" class="btn btn-sign"/>
             </form>
             <a href="http://CallForFreedom.org" target="_blank" class="btn btn-share"> Share</a>
