Fix body tag issue and skip JS cache

--- a/internetdefense/templates/index.html
+++ b/internetdefense/templates/index.html
@@ -62,7 +62,7 @@
 
         <div class="update" style="width: 750px; margin: 0 auto; padding-top: 30px;">
         <h2 id="instructions">Instructions</h2>
-        <p style="margin-bottom: 10px; margin-top: 10px; font-size: 14px; line-height: 1.5;"><strong>For most websites:</strong> Simply paste the code just below the <body> tag of the page.</p>
+        <p style="margin-bottom: 10px; margin-top: 10px; font-size: 14px; line-height: 1.5;"><strong>For most websites:</strong> Simply paste the code just below the &lt;body&gt; tag of the page.</p>
             
             <p style="margin-bottom: 10px;font-size: 14px; line-height: 1.5;"><strong>Tumblr</strong>: Go to your settings by clicking the gear on the toolbar at the top of your Tumblr feed, then hit the 'customize' button under the 'Theme' section. Once on the customization page, click the "edit HTML" button. Scroll through the HTML code looking for the '&lt;body&gt;' tag. Once you find it, paste the code right beneath it, click "update preview" at the top of the code, and then click "save".
 </p>
