Adds IP tracking support

--- a/internetdefense/apps/campaigns/templates/campaigns/nsa/modal.html
+++ b/internetdefense/apps/campaigns/templates/campaigns/nsa/modal.html
@@ -133,6 +133,7 @@
               <input type="text" placeholder="Email" name="Email" class="txt-email" />
               <input type="hidden" name="ip" id="signup_ip" value="">
               <input type="hidden" name="object" value="supporter">
+              <input type="hidden" name="ip" id="signup_ip" value="" />
               <input type="hidden" name="organization_KEY" value="501">
               <input type="hidden" name="action" value="1" />
               <input type="hidden" name="user_agent" id="user_agent" value="">
@@ -146,6 +147,7 @@
       </div>
       <a href="http://restorethefourth.net/" class="restore" target="_blank">Restore the Fourth</a>
     </section>
+    <script src="../../js/frame.js"></script>
    <script type="text/javascript">
    Zepto(function($){
      $('[name="Email"]').bind('focus', function() {
