Fix modal signup tagging and auto

--- a/internetdefense/apps/campaigns/templates/campaigns/nsa/modal.html
+++ b/internetdefense/apps/campaigns/templates/campaigns/nsa/modal.html
@@ -136,6 +136,8 @@
               <input type="hidden" name="ip" id="signup_ip" value="" />
               <input type="hidden" name="organization_KEY" value="501">
               <input type="hidden" name="action" value="1" />
+              <input type="hidden" id="trigger" name="email_trigger_KEYS" value="242">
+              <input type="hidden" name="tag" value="july4th-modal">
               <input type="hidden" name="user_agent" id="user_agent" value="">
               <input type="hidden" name="redirect" value="https://cms.fightforthefuture.org/july-4th-celebrate-4th-amendment-post-it-everywhere/#thanks"> 
               <input type="submit" value="Sign" class="btn btn-sign"/>
