Fix typo in banner for 4th

--- a/internetdefense/apps/campaigns/templates/campaigns/nsa/banner.html
+++ b/internetdefense/apps/campaigns/templates/campaigns/nsa/banner.html
@@ -28,7 +28,7 @@
  <body>
   <a class="ad_banner_full" href="http://callforfreedom.org" target="_blank"> 
    <div class="ad_bannerc"> 	
-    <div class="ad_title">This 4th July, we stand for the 4th Amendment and against NSA spying.</div>
+    <div class="ad_title">This 4th of July, we stand for the 4th Amendment and against NSA spying.</div>
     <div class="ad_subtitle">The right of the people to be secure... against unreasonable searches and seizures, <strong>shall not be violated</strong>.</div>
     <small class="ad_button1">Sign</small> <small class="ad_button2">Share</small>
    </div> 
