--- a/internetdefense/templates/index.html
+++ b/internetdefense/templates/index.html
@@ -4,7 +4,7 @@
 
     <div class="wrap" id="intro">
         <h1 id="logo">Internet Defense League</h1>
-        <h2 class="montserrat">4th of July Cat Signal! Join the largest protest since SOPA to stop NSA spying!</h2>
+        <h2 class="montserrat">Critical! We have a chance to pass a US law that would defund NSA unconstitutional spying! Help out now!</h2>
         
         <div class="indent dark large">
             <h3 class="montserrat">Get the code for your site:</h3>
@@ -41,7 +41,7 @@
                 <div class="small">
                     <span class="inputs">
                         <input type="radio" name="campaign" id="single" value="" />
-                        <label for="single" class="montserrat">Just for <a href="http://www.callforfreedom.org">Call for Freedom</a></label>
+                        <label for="single" class="montserrat">Just for <a href="http://defundthensa.com/">Defund the NSA</a></label>
                     </span>
                     <p class="description">Code is live as soon as you add it, but you'll have to update it for each new campaign.</p>
                     <fieldset style="display: none;">
