--- a/internetdefense/templates/index.html
+++ b/internetdefense/templates/index.html
@@ -4,7 +4,7 @@
 
     <div class="wrap" id="intro">
         <h1 id="logo">Internet Defense League</h1>
-        <h2 class="montserrat">Critical! We have a chance to pass a US law that would defund NSA unconstitutional spying! Help out now!</h2>
+        <h2 class="montserrat">Critical! We have a chance to pass a US law that would defund NSA blanket spying! Help out now!</h2>
         
         <div class="indent dark large">
             <h3 class="montserrat">Get the code for your site:</h3>
