--- a/internetdefense/templates/base.html
+++ b/internetdefense/templates/base.html
@@ -7,7 +7,7 @@
     <title>{% block title %}The Internet Defense League - Protecting the Free Internet since 2012.{% endblock title %}</title>
     <link href="{{ SECURE_STATIC_URL}}css/one.css" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
-    <!-- <script src="{{ SECURE_STATIC_URL }}js/customize.js?1" async="async"></script> -->
+    <script src="{{ SECURE_STATIC_URL }}js/customize.js?1" async="async"></script>
     <meta property="og:title" content="Want to help defend the internet from censorship and broken legislation? Join me in the Internet Defense League! If we act together, we can save the net." />
           <meta property="og:description" content="The Internet Defense League is a group of sites simultaneously sound the alarm when powerful interests try to take control of the internet. Think the SOPA blackout, but larger and even more unstoppable. We have big plans that you can be a part of. Register your site now!" />
           <meta property="og:image" content="{{ SECURE_STATIC_URL }}images/fb_share.png" />
