--- a/internetdefense/templates/index.html
+++ b/internetdefense/templates/index.html
@@ -4,7 +4,7 @@
 
     <div class="wrap" id="intro">
         <h1 id="logo">Internet Defense League</h1>
-        <h2 class="montserrat">Help make sure the largest-ever protest against mass spying happens on Saturday.</h2>
+        <h2 class="montserrat">Help amplify the largest-ever protest against mass spying, happening this Saturday in DC.</h2>
         
         <div class="indent dark large">
             <h3 class="montserrat">Get the code for your site:</h3>
