Two subheadlines were added

--- a/internetdefense/templates/index.html
+++ b/internetdefense/templates/index.html
@@ -5,6 +5,14 @@
     <div class="wrap" id="intro">
         <h1 id="logo">Internet Defense League</h1>
         <h2 class="montserrat">Help amplify the largest-ever protest against mass spying, happening this Saturday in DC.</h2>
+
+        <h3 class="montserrat">
+            The Internet Defense League supports the Stop Watching Us Coalition. Get the code for your site below to display a message to your users promoting the largest rally ever against NSA surveillance.
+        </h3>
+
+        <h3 class="montserrat">
+            For more options, check this <a href="https://github.com/tfrce/project-megaphone">Github Repo</a>
+        </h3>
         
         <div class="indent dark large">
             <h3 class="montserrat">Get the code for your site:</h3>
