Wordpress link was added

--- a/internetdefense/templates/index.html
+++ b/internetdefense/templates/index.html
@@ -13,6 +13,10 @@
         <h3 class="montserrat">
             For more options, check this <a href="https://github.com/tfrce/project-megaphone">Github Repo</a>
         </h3>
+
+        <a class="montserrat" style="font-size: 14px; text-align: center; width: 100%; display: block;" href="http://wordpress.org/plugins/project-megaphone-banner/">
+            Wordpress user? Use this plugin!
+        </a>
         
         <div class="indent dark large">
             <h3 class="montserrat">Get the code for your site:</h3>
