Text link was updated from Defund the NSA -> Stop Watching Us Rally

--- a/internetdefense/templates/index.html
+++ b/internetdefense/templates/index.html
@@ -53,7 +53,7 @@
                 <div class="small">
                     <span class="inputs">
                         <input type="radio" name="campaign" id="single" value="" />
-                        <label for="single" class="montserrat">Just for <a href="http://defundthensa.com/">Defund the NSA</a></label>
+                        <label for="single" class="montserrat">Just for <a href="https://rally.stopwatching.us/fight-surveillance-with-9-lines-of-code/">Stop Watching Us Rally</a></label>
                     </span>
                     <p class="description">Code is live as soon as you add it, but you'll have to update it for each new campaign.</p>
                     <fieldset style="display: none;">
