Updated copy for TDWFB

--- a/internetdefense/templates/index.html
+++ b/internetdefense/templates/index.html
@@ -4,14 +4,14 @@
 
     <div class="wrap" id="intro">
         <h1 id="logo">Internet Defense League</h1>
-        <h2 class="montserrat">Help amplify the largest-ever protest against mass spying, happening this Saturday in DC.</h2>
+        <h2 class="montserrat">We are joining over 4,000 other websites to protest mass surveillance on Feb 11: The Day We Fight Back</h2>
 
         <h3 class="montserrat">
-            The Internet Defense League supports the Stop Watching Us Coalition. Get the code for your site below to display a message to your users promoting the largest rally ever against NSA surveillance.
+            To celebrate our epic defeat of the SOPA two years ago, and to honor and remember Internet activist Aaron Swartz, we're partnering with thousands of other sites on The Day We Fight Back to stop mass surveillance.
         </h3>
 
         <h3 class="montserrat">
-            For more options, check this <a href="https://github.com/tfrce/project-megaphone">Github Repo</a>
+            For more info on The Day We Fight Back,  <a href="https://thedaywefightback.org/?r=fftf">Click Here</a>
         </h3>
 
         <a class="montserrat" style="font-size: 14px; text-align: center; width: 100%; display: block;" href="http://wordpress.org/plugins/project-megaphone-banner/">
