Updated Wordpress link

--- a/internetdefense/templates/index.html
+++ b/internetdefense/templates/index.html
@@ -14,7 +14,7 @@
             For more info on The Day We Fight Back,  <a href="https://thedaywefightback.org/?r=fftf">Click Here</a>
         </h3>
 
-        <a class="montserrat" style="font-size: 14px; text-align: center; width: 100%; display: block;" href="http://wordpress.org/plugins/project-megaphone-banner/">
+        <a class="montserrat" style="font-size: 14px; text-align: center; width: 100%; display: block;" href="http://wordpress.org/plugins/tdwfb/">
             Wordpress user? Use this plugin!
         </a>
         
