The Day We Fight Back updates

--- a/internetdefense/templates/include.html
+++ b/internetdefense/templates/include.html
@@ -1,4 +1,5 @@
-    window._idl = {};{variant}{campaign}
+    window._idl = {};
+    _idl.variant = "banner";{campaign}
     (function() {
         var idl = document.createElement('script');
         idl.type = 'text/javascript';
